--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,23 @@
 plugins {
-    id 'java-library'
-
+    id 'java'
 }
+
+group 'org.example'
+version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
-
 dependencies {
-    testImplementation (
-            'com.codeborne:selenide:6.16.0',
-            'org.junit.jupiter:junit-jupiter:5.9.3'
-    )
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testImplementation 'org.testng:testng:7.1.0'
+    testImplementation 'com.codeborne:selenide:6.18.0'
+
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
 }
 
 test {
